<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_response_text"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imageView_text"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/openFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_openFile" />

    <Button
        android:id="@+id/buttonOpenCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_openCamera" />

    <Button
        android:id="@+id/get_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_getResults" />

</LinearLayout>